--- a/package.json
+++ b/package.json
@@ -6,19 +6,23 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Fernanda Andrade",
   "license": "MIT",
   "dependencies": {
+    "csv": "^3.1.0",
     "ramda": "^0.25.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/mocha": "^5.2.5",
+    "@types/node": "^10.7.0",
     "@types/ramda": "^0.25.36",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
+    "ts-lint": "^4.5.1",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.1"
   }
