--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "compile": "tsc",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "prestart": "npm run compile",
-    "start": "node lib/reporter.js",
+    "start": "node lib/main.js",
     "test": "mocha --require ts-node/register test/**/*.test.ts"
   },
   "author": "Fernanda Andrade",
@@ -16,6 +16,7 @@
   "dependencies": {
     "csv": "^3.1.0",
     "csv-parse": "^2.5.0",
+    "date-fns": "^1.29.0",
     "ramda": "^0.25.0"
   },
   "devDependencies": {
