--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "target": "ES2015",
-    "module": "commonjs",
     "declaration": true,
+    "module": "commonjs",
     "outDir": "lib",
-    "strict": true
+    "strict": true,
+    "target": "ES2015"
   },
   "include": [
     "src/**/*"
