--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "license": "MIT",
   "dependencies": {
     "csv": "^3.1.0",
+    "csv-generate": "^2.1.0",
     "csv-parse": "^2.5.0",
     "date-fns": "^1.29.0",
+    "json2csv": "^4.2.1",
     "ramda": "^0.25.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
+    "@types/json2csv": "^4.2.0",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.7.0",
     "@types/ramda": "^0.25.36",
