--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
     "declaration": true,
+    "lib": [ "es2015" ],
     "module": "commonjs",
     "outDir": "lib",
     "strict": true,
-    "target": "ES2018"
+    "target": "ES2015"
   },
   "include": [
     "src/**/*"
