chore: tslint-to-eslint

--- a/.github/workflows/cli.yaml
+++ b/.github/workflows/cli.yaml
@@ -3,14 +3,25 @@ name: harvest-overtime
 on: [push]
 
 jobs:
-  build:
-
+  lint:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [12.16.3]
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: npm install
+    - run: npm run lint
 
+  build:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [8.x, 10.x, 12.16.3]
-
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
@@ -19,7 +30,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npm run compile
-    - run: npm run lint
     - run: npm test
       env:
         CI: true
