--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,11 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "lib": [ "es2015" ],
+    "lib": ["es2015"],
     "module": "commonjs",
     "outDir": "lib",
     "strict": true,
     "target": "ES2015"
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
