--- a/package.json
+++ b/package.json
@@ -46,16 +46,16 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.33",
     "@types/chai": "^4.2.14",
-    "@types/json2csv": "^4.5.1",
+    "@types/json2csv": "^5.0.1",
     "@types/mocha": "^8.0.4",
     "@types/node": "^14.14.10",
-    "@types/ramda": "^0.25.51",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
+    "@types/ramda": "^0.27.32",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
     "chai": "^4.2.0",
     "eslint": "^7.14.0",
     "mocha": "^8.2.1",
-    "prettier": "2.1.1",
+    "prettier": "^2.2.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   }
