--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "harvest-overtime",
-  "version": "2.2.2",
+  "version": "3.0.0",
   "description": "Track the overtime!",
   "keywords": [
     "harvest",
@@ -31,33 +31,32 @@
   "author": "Fernanda Andrade",
   "license": "MIT",
   "dependencies": {
-    "@types/chalk": "^2.2.0",
     "bluebird": "^3.7.2",
-    "chalk": "^2.4.2",
+    "chalk": "^4.1.1",
     "cli-table3": "^0.6.0",
-    "commander": "^2.20.3",
-    "csv": "^5.3.2",
-    "csv-generate": "^2.2.2",
-    "csv-parse": "^4.12.0",
-    "date-fns": "^1.30.1",
-    "json2csv": "^4.5.4",
+    "commander": "^8.0.0",
+    "csv": "^5.5.0",
+    "csv-generate": "^3.4.0",
+    "csv-parse": "^4.16.0",
+    "date-fns": "^2.22.1",
+    "json2csv": "^5.0.6",
     "path": "^0.12.7",
-    "ramda": "^0.25.0"
+    "ramda": "^0.27.1"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.32",
-    "@types/chai": "^4.2.12",
-    "@types/json2csv": "^4.5.1",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^10.17.29",
-    "@types/ramda": "^0.25.51",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
-    "chai": "^4.2.0",
-    "eslint": "^7.8.1",
-    "mocha": "^7.2.0",
-    "prettier": "2.1.1",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.9.7"
+    "@types/bluebird": "^3.5.35",
+    "@types/chai": "^4.2.19",
+    "@types/json2csv": "^5.0.2",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^15.14.1",
+    "@types/ramda": "^0.27.42",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
+    "chai": "^4.3.4",
+    "eslint": "^7.30.0",
+    "mocha": "^9.0.2",
+    "prettier": "^2.3.2",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.5"
   }
 }
